--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-block-environment/[Ll]ibrary/
+/block-environment/[Ll]ibrary/
 /block-environment/[Tt]emp/
 /block-environment/[Oo]bj/
 /block-environment/[Bb]uild/
