--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@ Thumbs.db
 
 *.drawio.dtmp
 *.drawio.bkp
+awesome-papers/collaib/source/Exploring Challenges and Opportunities to Support Designers in Learning to Co-create with AI-based Manufacturing Design Tools.md
